--- a/views/snail.ejs
+++ b/views/snail.ejs
@@ -8,10 +8,36 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title><%- title %></title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <h1 class="mt-5">Well climbing simulator: Snail edition (GOTY 2018)</h1>
+      <hr>
+      <form class="mt-5" method="post" action="/snail">
+        <div class="form-group">
+          <label for="input">Well height</label>
+          <input name="h" type="text" class="form-control" id="input" aria-describedby="inputHelp" placeholder="6">
+          <small id="inputHelp" class="form-text text-muted">The height of the well that the snail has to climb.</small>
+        </div>
+        <div class="form-group">
+          <label for="input2">Climb distance</label>
+          <input name="u" type="text" class="form-control" id="input2" aria-describedby="input2Help" placeholder="3">
+          <small id="input2Help" class="form-text text-muted">How much the snail climbs each day.</small>
+        </div>
+        <div class="form-group">
+          <label for="input3">Slide distance</label>
+          <input name="d" type="text" class="form-control" id="input3" aria-describedby="input3Help" placeholder="2">
+          <small id="input3Help" class="form-text text-muted">How much the snail slides down each day.</small>
+        </div>
+        <div class="form-group">
+          <label for="input4">Fatigue percentage</label>
+          <input name="f" type="text" class="form-control" id="input4" aria-describedby="input4Help" placeholder="30">
+          <small id="input4Help" class="form-text text-muted">How much climbing power the snail loses each day, based on the first day's performance.</small>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
